@@ -8,6 +8,7 @@ PHP 4                                                                      NEWS
 - Fixed potential problems with unserializing invalid serialize data. (Marcus)
 - Fixed bug #30750 (Meaningful error message when upload directory is not 
   accessible). (Ilia)
+- Fixed bug #30739 (imagefill does not set back alphablending mode) (Pierre)
 - Fixed bug #30672 (Problem handling exif data in jpeg images at unusual 
   places). (Marcus)
 - Fixed bug #30658 (Ensure that temporary files created by GD are removed).
